--- a/src/main/client/src/app/pages/home/home.component.html
+++ b/src/main/client/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="app-home-layout app-fxLayout app-row app-fill">
     @for(card of state.views; track $index){
-    <mat-card appearance="outlined" class="mat-mdc-elevation-specific mat-elevation-z0">
+    <mat-card appearance="outlined" >
         <mat-card-header>
             <mat-card-title> {{ card.route | translate}} </mat-card-title>
         </mat-card-header>
