--- a/src/main/client/src/app/pages/centrality/centrality.component.html
+++ b/src/main/client/src/app/pages/centrality/centrality.component.html
@@ -2,25 +2,32 @@
 <div class="app-fxLayout app-row app-fill" style="position: relative;">
   <div style="flex: 1 30%;" class="app-filters">
     <div *ngIf="recipients">
-      <h3>{{ 'field.recipients' | translate}}</h3>
-      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        @for(k of recipients; track $index;){
-        <mat-list-item (click)="clickRecipient(k)">
-          <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
-        </mat-list-item>
-        }
-      </mat-list>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of recipients; track $index; let idx = $index){
+          <mat-list-item (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()">
+            {{ k.val}} ({{k.count}})
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
     </div>
     <div *ngIf="mentioned">
-      <h3>{{ 'field.mentioned' | translate}}</h3>
-      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        @for(k of mentioned; track $index; let idx = $index){
-        <mat-list-item (mouseover)="showNode(k, 'mentioned')"
-          (mouseout)="hideNode()">
-          <span [style.color]="colors[idx % colors.length]">{{ k.val}} ({{k.count}}) </span>
-        </mat-list-item>
-        }
-      </mat-list>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of mentioned; track $index; let idx = $index){
+          <mat-list-item (mouseover)="showNode(k, 'mentioned')" (mouseout)="hideNode()">
+            <span [style.color]="colors[idx % colors.length]">{{ k.val}} ({{k.count}}) </span>
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
     </div>
 
   </div>
