--- a/src/main/client/src/app/pages/identities/identities.component.html
+++ b/src/main/client/src/app/pages/identities/identities.component.html
@@ -3,25 +3,32 @@
   <div style="flex: 1 30%;" class="app-filters">
 
     <div *ngIf="authors">
-      <h3>{{ 'field.authors' | translate}}</h3>
-      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        @for(k of authors; track $index; let idx = $index){
-        <mat-list-item (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()">
-          {{ k.val}} ({{k.count}})
-        </mat-list-item>
-        }
-      </mat-list>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.authors' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of authors; track $index; let idx = $index){
+          <mat-list-item (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()">
+            {{ k.val}} ({{k.count}})
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
     </div>
     <div *ngIf="recipients">
-      <h3>{{ 'field.recipients' | translate}}</h3>
-      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
-        @for(k of recipients; track $index; let idx = $index){
-        <mat-list-item (mouseover)="showNode(k, 'recipient')"
-          (mouseout)="hideNode()">
-          {{ k.val}} ({{k.count}})
-        </mat-list-item>
-        }
-      </mat-list>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of recipients; track $index; let idx = $index){
+          <mat-list-item (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()">
+            {{ k.val}} ({{k.count}})
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
     </div>
 
   </div>
