--- a/src/main/client/src/app/pages/relation/relation.component.html
+++ b/src/main/client/src/app/pages/relation/relation.component.html
@@ -8,9 +8,10 @@
                     <mat-panel-title> {{ 'field.relation_tenants' | translate}} </mat-panel-title>
                 </mat-expansion-panel-header>
                 <mat-list>
-                @for(k of state.tenants; track $index; let idx = $index){
+                @for(k of state.tenants; track $index; let idx = $index;){
+                    @let is = intersection(k);
                 <mat-list-item (click)="clickTenant(k)">
-                    <mat-checkbox [disabled]="k.val === tenant.val" [checked]="k.selected || k.val === tenant.val">{{ k.val}} {{k.date_year_min}} - {{k.date_year_max}} ({{k.count}}) </mat-checkbox>
+                    <mat-checkbox [disabled]="k.val === tenant.val || is.start === 0" [checked]="k.selected || k.val === tenant.val">{{ k.val}} {{k.date_year_min}} - {{k.date_year_max}} ({{k.count}}) </mat-checkbox>
                 </mat-list-item>
                 }
             </mat-list>
