--- a/src/main/client/src/app/pages/relation/relation.component.html
+++ b/src/main/client/src/app/pages/relation/relation.component.html
@@ -18,7 +18,7 @@
             </mat-expansion-panel>            
         </div>
 
-        <div *ngIf="authors">
+        <!-- <div *ngIf="authors">
             <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0">
                 <mat-expansion-panel-header>
                     <mat-panel-title> {{ 'field.authors' | translate}} </mat-panel-title>
@@ -40,6 +40,21 @@
                 <mat-list>
                 @for(k of recipients; track $index; let idx = $index){
                 <mat-list-item (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()">
+                    {{ k.val}} ({{k.count}})
+                </mat-list-item>
+                }
+            </mat-list>
+            </mat-expansion-panel>  
+        </div> -->
+
+        <div *ngIf="mentioned">
+            <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0">
+                <mat-expansion-panel-header>
+                    <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
+                </mat-expansion-panel-header>
+                <mat-list>
+                @for(k of mentioned; track $index; let idx = $index){
+                <mat-list-item (mouseover)="showNode(k, 'mentioned')" (mouseout)="hideNode()">
                     {{ k.val}} ({{k.count}})
                 </mat-list-item>
                 }
