--- a/src/main/client/src/app/components/letters-info/letters-info.component.html
+++ b/src/main/client/src/app/components/letters-info/letters-info.component.html
@@ -2,8 +2,8 @@
     <mat-card-header>
         <mat-card-title>{{ header() }}</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-            <div [innerHtml]="content()" class="app-info-content"></div>
+    <mat-card-content class="app-info-content">
+            <div [innerHtml]="content()" class="app-info-row"></div>
     </mat-card-content>
     <mat-card-actions align="end" class="app-mat-card-actions">
         <button mat-raised-button (click)="close()">{{ 'Close' }}</button>
