--- a/src/main/client/src/app/components/letters-info/letters-info.component.html
+++ b/src/main/client/src/app/components/letters-info/letters-info.component.html
@@ -1,4 +1,4 @@
-<mat-card appearance="outlined">
+<mat-card class="mat-mdc-elevation-specific mat-elevation-z3">
     <mat-card-header>
         <mat-card-title>{{ header() }}</mat-card-title>
     </mat-card-header>
