--- a/src/main/client/src/app/pages/map/map.component.html
+++ b/src/main/client/src/app/pages/map/map.component.html
@@ -22,7 +22,7 @@
         </mat-list>
       </mat-expansion-panel>
     </div>
-    <div *ngIf="mentioned">
+    <!-- <div *ngIf="mentioned">
       <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
         <mat-expansion-panel-header>
           <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
@@ -36,7 +36,7 @@
         </mat-list>
       </mat-expansion-panel>
       
-    </div>
+    </div> -->
   </div>
   <div class="app-content">
     <div class="app-years">
