--- a/src/main/client/src/app/pages/relation/relation.component.html
+++ b/src/main/client/src/app/pages/relation/relation.component.html
@@ -65,7 +65,7 @@
         </div>
 
     </div>
-    <div class="app-content">
+    <div class="app-content app-fill-w app-fill-h">
         <div class="app-years">
             <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year"
                 (onChangeLimits)="changeLimits($event)"></app-years-chart>
