--- a/src/main/client/src/app/pages/relation/relation.component.html
+++ b/src/main/client/src/app/pages/relation/relation.component.html
@@ -33,7 +33,7 @@
                 }
             </mat-list>
             </mat-expansion-panel>    
-        </div>
+        </div> -->
         <div *ngIf="recipients">
             <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0">
                 <mat-expansion-panel-header>
@@ -47,9 +47,9 @@
                 }
             </mat-list>
             </mat-expansion-panel>  
-        </div> -->
+        </div>
 
-        <div *ngIf="mentioned">
+        <!-- <div *ngIf="mentioned">
             <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0">
                 <mat-expansion-panel-header>
                     <mat-panel-title> {{ 'field.mentioned' | translate}} ({{mentioned.length}})</mat-panel-title>
@@ -62,7 +62,7 @@
                     }
                 </mat-list>
             </mat-expansion-panel>
-        </div>
+        </div> -->
 
     </div>
     <div class="app-content app-fill-w app-fill-h">
