--- a/src/main/client/src/app/pages/keywords/keywords.component.html
+++ b/src/main/client/src/app/pages/keywords/keywords.component.html
@@ -22,13 +22,36 @@
       </mat-expansion-panel>
 
     </div>
-    <div *ngIf="mentioned">
+    <div>
       <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
         <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
+          <mat-panel-title> {{ 'Identities to include' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+          <mat-checkbox [disabled]="includeAuthors && !includeRecipients" [(ngModel)]="includeAuthors" (change)="getData(true)">{{ 'field.authors' | translate}}</mat-checkbox>
+          <mat-checkbox [disabled]="!includeAuthors && includeRecipients" [(ngModel)]="includeRecipients" (change)="getData(true)">{{ 'field.recipients' | translate}}</mat-checkbox>
+      </mat-expansion-panel>
+    </div>
+    <div *ngIf="authors">
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.authors' | translate}} </mat-panel-title>
         </mat-expansion-panel-header>
         <mat-list>
-          @for(identity of mentioned; track $index; let idx = $index){
+          @for(identity of authors; track $index; let idx = $index){
+          <mat-list-item (click)="clickMentioned(identity)">
+            {{ identity.val}} ({{identity.count}})
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
+    </div>
+    <div *ngIf="recipients">
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(identity of recipients; track $index; let idx = $index){
           <mat-list-item (click)="clickMentioned(identity)">
             {{ identity.val}} ({{identity.count}})
           </mat-list-item>
