--- a/src/main/client/src/scss/_app-variables.scss
+++ b/src/main/client/src/scss/_app-variables.scss
@@ -72,6 +72,8 @@
   --mdc-secondary-navigation-tab-container-height: 48px;
   //--mat-toolbar-standard-height: 80px;
   --mat-table-row-item-container-height: 36px;
+
+  --mat-sys-body-large-size: .9rem;
 }
 
 // gaps
