--- a/src/main/client/src/scss/_app-layout.scss
+++ b/src/main/client/src/scss/_app-layout.scss
@@ -19,7 +19,7 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-
+  font-size: 14px;
   .app-content-wrapper {
     padding: var(--app-default-wrapper);
   }
