--- a/src/main/client/src/app/pages/keywords/keywords.component.html
+++ b/src/main/client/src/app/pages/keywords/keywords.component.html
@@ -7,6 +7,23 @@
 <div class="app-fxLayout app-row app-fill" style="position: relative;" *ngIf="!invalidTenant">
   <div style="flex: 1 30%;" class="app-filters">
 
+@if (state.tenant()) {
+    <div>
+        <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title> {{ 'tenants' | translate}} </mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-list>
+                @for(k of state.tenants; track $index; let idx = $index;){
+                <mat-list-item (click)="clickTenant(k)">
+                    <mat-checkbox [disabled]="k.val === state.tenant().val"
+                        [(ngModel)]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+                </mat-list-item>
+                }
+            </mat-list>
+        </mat-expansion-panel>
+    </div>
+}
     <div *ngIf="keywords_cs">
       <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
         <mat-expansion-panel-header>
