--- a/src/main/client/src/app/pages/identities/identities.component.html
+++ b/src/main/client/src/app/pages/identities/identities.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+<div class="app-loading">@if(loading && !running){<mat-progress-bar mode="indeterminate"></mat-progress-bar>}</div>
 <div class="app-fxLayout app-row app-fill" style="position: relative;">
   <div style="flex: 1 30%;" class="app-filters">
 @if (state.tenant()) {
@@ -51,7 +51,7 @@
     <div class="app-content app-fill-w app-fill-h">
     <div class="app-years">
       <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year"
-        (onChangeLimits)="changeLimits($event)"></app-years-chart>
+        (onChangeLimits)="changeLimits($event)" [withAnimation]="false" (onChangeRunning)="changeRunning($event)"></app-years-chart>
     </div>
 
     <div class="app-fxFlex">
