--- a/src/main/client/src/app/pages/professions/professions.component.html
+++ b/src/main/client/src/app/pages/professions/professions.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+<mat-progress-bar *ngIf="loading" mode="indeterminate" class="app-loading"></mat-progress-bar>
 <mat-card *ngIf="invalidTenant" appearance="outlined" class="app-invalidTenant">
     <mat-card-header>
         <mat-card-title> {{ 'invalidTenant' | translate}} </mat-card-title>
